Fixed overflow in cookie bar

--- a/Scss/styles.scss
+++ b/Scss/styles.scss
@@ -163,7 +163,7 @@ section {
 
 #cookie-bar {
     width: 100%;
-    height: 40vh;
+    height: 60vh;
     background-color: rgba( var(--color-rgbval-dark) ,0.7);
     border-top: 1px solid var(--color-accent);
     position: fixed;
